--- a/index.html
+++ b/index.html
@@ -265,156 +265,207 @@
 const questions =
 [
   {
-    "text": "die Ruhe & Gemütlichkeit",
-    "options": ["la calma y la comodidad", "el ruido y la prisa"],
+    "text": "erstens / zweitens",
+    "options": ["firstly / secondly", "before / after"],
     "correct": 0
   },
   {
-    "text": "Ich nehme es mit Gelassenheit.",
-    "options": ["Me pongo muy nervioso/a.", "Me lo tomo con calma."],
-    "correct": 1
-  },
-  {
-    "text": "sich etwas angewöhnen",
-    "options": ["olvidar algo", "acostumbrarse a algo"],
-    "correct": 1
-  },
-  {
-    "text": "sich viele Gedanken machen",
-    "options": ["preocuparse mucho", "descansar profundamente"],
+    "text": "insgesamt müde",
+    "options": ["completely tired", "partly awake"],
     "correct": 0
   },
   {
-    "text": "Zwangsgedanken",
-    "options": ["pensamientos obsesivos", "sueños agradables"],
+    "text": "den Leitzins anheben / senken",
+    "options": ["to raise / lower the key interest rate", "to stabilize the market"],
     "correct": 0
   },
   {
-    "text": "ändern",
-    "options": ["cambiar", "repetir"],
+    "text": "die Divergenz",
+    "options": ["agreement", "divergence"],
+    "correct": 1
+  },
+  {
+    "text": "Wenn es dazu ___, dass sie auseinandergehen, entsteht ein Konflikt.",
+    "options": ["kommt", "kommen"],
     "correct": 0
   },
   {
-    "text": "verändern",
-    "options": ["conservar", "modificar / transformar"],
+    "text": "Der Kurs steigt / fällt",
+    "options": ["The course begins / ends", "The price rises / falls"],
     "correct": 1
   },
   {
-    "text": "die Atmung",
-    "options": ["la respiración", "el pulso"],
+    "text": "rasant steigen / extrem ansteigen",
+    "options": ["to increase rapidly", "to remain stable"],
     "correct": 0
   },
   {
-    "text": "die Gegenwart",
-    "options": ["el pasado", "el presente"],
-    "correct": 1
-  },
-  {
-    "text": "die Vergangenheit",
-    "options": ["el futuro", "el pasado"],
-    "correct": 1
-  },
-  {
-    "text": "der Ausschnitt",
-    "options": ["el fragmento", "la película completa"],
+    "text": "___ er gegangen war, begann die Sitzung.",
+    "options": ["Nachdem", "Bevor"],
     "correct": 0
   },
   {
-    "text": "knauserig",
-    "options": ["generoso", "tacaño"],
+    "text": "___ wir anfangen, klären wir noch eine Frage.",
+    "options": ["Nachdem", "Bevor"],
     "correct": 1
   },
   {
-    "text": "geizig",
-    "options": ["paciente", "avaro"],
-    "correct": 1
-  },
-  {
-    "text": "Ich mache mir viele ________.",
-    "options": ["Gedanken", "Gedanke"],
+    "text": "Ich ___ bestimmt nicht alt.",
+    "options": ["werde", "wurde"],
     "correct": 0
   },
   {
-    "text": "Du machst dir viele ________.",
-    "options": ["denken", "Gedanken"],
-    "correct": 1
-  },
-  {
-    "text": "Er ________ sich viele Gedanken.",
-    "options": ["machen", "macht"],
-    "correct": 1
-  },
-  {
-    "text": "Ich bin eine Person, die sich viele Gedanken ________.",
-    "options": ["macht", "machen"],
+    "text": "Ihr ___ morgen informiert.",
+    "options": ["werdet", "wurden"],
     "correct": 0
   },
   {
-    "text": "Ich denke oft ________ meine Probleme nach.",
-    "options": ["über", "auf"],
+    "text": "Sie ___ sehr nervös.",
+    "options": ["werden", "wurden"],
+    "correct": 1
+  },
+  {
+    "text": "Der Raum ist bereits ___ worden.",
+    "options": ["aufräumen", "ausgeräumt"],
+    "correct": 1
+  },
+  {
+    "text": "abräumen",
+    "options": ["to clear the table", "to decorate"],
     "correct": 0
   },
   {
-    "text": "Ich mache mir Gedanken ________ meine Zukunft.",
-    "options": ["über", "für"],
+    "text": "ausräumen",
+    "options": ["to empty / clear out", "to fill up"],
     "correct": 0
   },
   {
-    "text": "Ich hatte früher Depressionen, aber jetzt ________ es mir besser.",
-    "options": ["gehe", "geht"],
+    "text": "Ich ___ befördert.",
+    "options": ["bekomme", "werde"],
     "correct": 1
   },
   {
-    "text": "Früher war ich depressiv, heute ________ ich optimistischer.",
-    "options": ["bin", "war"],
+    "text": "die Herausforderung",
+    "options": ["routine", "challenge"],
+    "correct": 1
+  },
+  {
+    "text": "fördern",
+    "options": ["to support / encourage", "to ignore"],
     "correct": 0
   },
   {
-    "text": "Ich habe mir die Serie ________.",
-    "options": ["gesehen an", "angesehen"],
-    "correct": 1
-  },
-  {
-    "text": "Ich habe die Serie ________.",
-    "options": ["angesehen an", "gesehen"],
-    "correct": 1
-  },
-  {
-    "text": "Ich habe nur Ausschnitte von dem Film auf YouTube ________.",
-    "options": ["gesehen", "angesehen mir"],
+    "text": "fordern",
+    "options": ["to ask for / demand", "to offer"],
     "correct": 0
   },
   {
-    "text": "Ich versuche immer, gute Laune zu ________, auch wenn ich gestresst bin.",
-    "options": ["behalten", "behalten"],
+    "text": "die Kaution",
+    "options": ["fine", "deposit"],
     "correct": 1
   },
   {
-    "text": "Ich ________ das lieber.",
-    "options": ["mag", "mache"],
+    "text": "Öl fördern",
+    "options": ["to refine oil", "to extract oil"],
     "correct": 1
   },
   {
-    "text": "Ich mache es lieber ________.",
-    "options": ["so", "so"],
-    "correct": 1
-  },
-  {
-    "text": "Zum Frühstück habe ich mir zwei ________ Eier gemacht.",
-    "options": ["hartgekochte", "hartkochen"],
+    "text": "die Aufmerksamkeit",
+    "options": ["attention", "distraction"],
     "correct": 0
   },
   {
-    "text": "Zum Frühstück habe ich mir ________ gemacht.",
-    "options": ["rühren", "Rührei"],
+    "text": "peinlich",
+    "options": ["embarrassing", "impressive"],
+    "correct": 0
+  },
+  {
+    "text": "unterstreichen",
+    "options": ["to underline / emphasize", "to cancel"],
+    "correct": 0
+  },
+  {
+    "text": "die Neugier",
+    "options": ["curiosity", "fear"],
+    "correct": 0
+  },
+  {
+    "text": "Kann man ein Kind fördern, ___ man seine Neugier unterstützt?",
+    "options": ["indem", "obwohl"],
+    "correct": 0
+  },
+  {
+    "text": "sich gut anfühlen",
+    "options": ["to feel good", "to be confusing"],
+    "correct": 0
+  },
+  {
+    "text": "Es gibt Tage, ___ ich merke, dass es gut klappt.",
+    "options": ["denen", "an denen"],
     "correct": 1
   },
   {
-    "text": "Zum Frühstück habe ich mir zwei ________ mit Vollkornbrot gemacht.",
-    "options": ["Spiegeleier", "Spiegeleier"],
+    "text": "zumindest",
+    "options": ["at least (opinion)", "minimum (numbers only)"],
+    "correct": 0
+  },
+  {
+    "text": "Ich ___ mehr gelernt.",
+    "options": ["hätte", "habe"],
+    "correct": 0
+  },
+  {
+    "text": "Ich ___ betrunken gewesen.",
+    "options": ["hätte", "wäre"],
     "correct": 1
+  },
+  {
+    "text": "Ich hätte arbeiten ___.",
+    "options": ["müssen", "muss"],
+    "correct": 0
+  },
+  {
+    "text": "Ich darf",
+    "options": ["I must", "I am allowed"],
+    "correct": 1
+  },
+  {
+    "text": "parken",
+    "options": ["to stop talking", "to park"],
+    "correct": 1
+  },
+  {
+    "text": "auflegen",
+    "options": ["to hang up", "to call back"],
+    "correct": 0
+  },
+  {
+    "text": "Es ___ sich gut an.",
+    "options": ["fühlt", "fühle"],
+    "correct": 0
+  },
+  {
+    "text": "in Bezug auf",
+    "options": ["because of", "with regard to"],
+    "correct": 1
+  },
+  {
+    "text": "schütten",
+    "options": ["to pour", "to shake"],
+    "correct": 0
+  },
+  {
+    "text": "Ich habe eine Reise ___.",
+    "options": ["planen", "geplant"],
+    "correct": 1
+  },
+  {
+    "text": "Ich bin es ___, früh aufzustehen.",
+    "options": ["gewohnt", "gewöhnt"],
+    "correct": 0
   }
 ]
+
 
 
 ;
