Update options for quiz question in index.html

--- a/index.html
+++ b/index.html
@@ -271,18 +271,13 @@ const questions =
   },
   {
     "text": "insgesamt müde",
-    "options": ["completely tired", "partly awake"],
+    "options": ["overall tired", "partly awake"],
     "correct": 0
   },
   {
     "text": "den Leitzins anheben / senken",
     "options": ["to raise / lower the key interest rate", "to stabilize the market"],
     "correct": 0
-  },
-  {
-    "text": "die Divergenz",
-    "options": ["agreement", "divergence"],
-    "correct": 1
   },
   {
     "text": "Wenn es dazu ___, dass sie auseinandergehen, entsteht ein Konflikt.",
