--- a/index.html
+++ b/index.html
@@ -265,199 +265,54 @@
 const questions =
 [
   {
-    "text": "erstens / zweitens",
-    "options": ["firstly / secondly", "before / after"],
-    "correct": 0
+    "text": "Flor hat Hinge auf ihrem Handy.",
+    "options": ["Flor trabaja con su móvil.", "Flor tiene hambre hoy.", "Flor tiene Hinge en su móvil."],
+    "correct": 2
   },
   {
-    "text": "insgesamt müde",
-    "options": ["overall tired", "partly awake"],
-    "correct": 0
-  },
-  {
-    "text": "den Leitzins anheben / senken",
-    "options": ["to raise / lower the key interest rate", "to stabilize the market"],
-    "correct": 0
-  },
-  {
-    "text": "Wenn es dazu ___, dass sie auseinandergehen, entsteht ein Konflikt.",
-    "options": ["kommt", "kommen"],
-    "correct": 0
-  },
-  {
-    "text": "Der Kurs steigt / fällt",
-    "options": ["The course begins / ends", "The price rises / falls"],
+    "text": "Flor sucht ein Date, kein Drama.",
+    "options": ["Flor compra un vestido rojo.", "Flor busca una cita, no drama.", "Flor bebe agua."],
     "correct": 1
   },
   {
-    "text": "rasant steigen / extrem ansteigen",
-    "options": ["to increase rapidly", "to remain stable"],
-    "correct": 0
-  },
-  {
-    "text": "___ er gegangen war, begann die Sitzung.",
-    "options": ["Nachdem", "Bevor"],
-    "correct": 0
-  },
-  {
-    "text": "___ wir anfangen, klären wir noch eine Frage.",
-    "options": ["Nachdem", "Bevor"],
+    "text": "Flor wischt nach rechts.",
+    "options": ["Flor limpia la mesa.", "Flor desliza a la derecha.", "Flor mira a la derecha."],
     "correct": 1
   },
   {
-    "text": "Ich ___ bestimmt nicht alt.",
-    "options": ["werde", "wurde"],
-    "correct": 0
-  },
-  {
-    "text": "Ihr ___ morgen informiert.",
-    "options": ["werdet", "wurden"],
-    "correct": 0
-  },
-  {
-    "text": "Sie ___ sehr nervös.",
-    "options": ["werden", "wurden"],
+    "text": "Flor liest ein lustiges Profil.",
+    "options": ["Flor escucha música triste.", "Flor lee un perfil divertido.", "Flor escribe una carta."],
     "correct": 1
   },
   {
-    "text": "Der Raum ist bereits ___ worden.",
-    "options": ["aufräumen", "ausgeräumt"],
+    "text": "Flor trinkt Kaffee beim ersten Date.",
+    "options": ["Flor cocina arroz en casa.", "Flor corre en el parque.", "Flor bebe café en la primera cita."],
+    "correct": 2
+  },
+  {
+    "text": "Flor mag Hunde und Pizza.",
+    "options": ["Flor no come pizza.", "Flor le gustan los perros y la pizza.", "Flor compra un perro y una pizza."],
     "correct": 1
   },
   {
-    "text": "abräumen",
-    "options": ["to clear the table", "to decorate"],
+    "text": "Flor schreibt: „Hallo 😊“",
+    "options": ["Flor grita muy fuerte.", "Flor duerme mucho.", "Flor escribe: \"Hola 😊\""],
+    "correct": 2
+  },
+  {
+    "text": "Flor wartet auf eine Antwort.",
+    "options": ["Flor espera una respuesta.", "Flor borra la app.", "Flor responde rápido."],
     "correct": 0
   },
   {
-    "text": "ausräumen",
-    "options": ["to empty / clear out", "to fill up"],
+    "text": "Flor hat ein Match!",
+    "options": ["Flor tiene un match.", "Flor pierde su móvil.", "Flor cancela la cita."],
     "correct": 0
   },
   {
-    "text": "Ich ___ befördert.",
-    "options": ["bekomme", "werde"],
-    "correct": 1
-  },
-  {
-    "text": "die Herausforderung",
-    "options": ["routine", "challenge"],
-    "correct": 1
-  },
-  {
-    "text": "fördern",
-    "options": ["to support / encourage", "to ignore"],
-    "correct": 0
-  },
-  {
-    "text": "fordern",
-    "options": ["to ask for / demand", "to offer"],
-    "correct": 0
-  },
-  {
-    "text": "die Kaution",
-    "options": ["fine", "deposit"],
-    "correct": 1
-  },
-  {
-    "text": "Öl fördern",
-    "options": ["to refine oil", "to extract oil"],
-    "correct": 1
-  },
-  {
-    "text": "die Aufmerksamkeit",
-    "options": ["attention", "distraction"],
-    "correct": 0
-  },
-  {
-    "text": "peinlich",
-    "options": ["embarrassing", "impressive"],
-    "correct": 0
-  },
-  {
-    "text": "unterstreichen",
-    "options": ["to underline / emphasize", "to cancel"],
-    "correct": 0
-  },
-  {
-    "text": "die Neugier",
-    "options": ["curiosity", "fear"],
-    "correct": 0
-  },
-  {
-    "text": "Kann man ein Kind fördern, ___ man seine Neugier unterstützt?",
-    "options": ["indem", "obwohl"],
-    "correct": 0
-  },
-  {
-    "text": "sich gut anfühlen",
-    "options": ["to feel good", "to be confusing"],
-    "correct": 0
-  },
-  {
-    "text": "Es gibt Tage, ___ ich merke, dass es gut klappt.",
-    "options": ["denen", "an denen"],
-    "correct": 1
-  },
-  {
-    "text": "zumindest",
-    "options": ["at least (opinion)", "minimum (numbers only)"],
-    "correct": 0
-  },
-  {
-    "text": "Ich ___ mehr gelernt.",
-    "options": ["hätte", "habe"],
-    "correct": 0
-  },
-  {
-    "text": "Ich ___ betrunken gewesen.",
-    "options": ["hätte", "wäre"],
-    "correct": 1
-  },
-  {
-    "text": "Ich hätte arbeiten ___.",
-    "options": ["müssen", "muss"],
-    "correct": 0
-  },
-  {
-    "text": "Ich darf",
-    "options": ["I must", "I am allowed"],
-    "correct": 1
-  },
-  {
-    "text": "parken",
-    "options": ["to stop talking", "to park"],
-    "correct": 1
-  },
-  {
-    "text": "auflegen",
-    "options": ["to hang up", "to call back"],
-    "correct": 0
-  },
-  {
-    "text": "Es ___ sich gut an.",
-    "options": ["fühlt", "fühle"],
-    "correct": 0
-  },
-  {
-    "text": "in Bezug auf",
-    "options": ["because of", "with regard to"],
-    "correct": 1
-  },
-  {
-    "text": "schütten",
-    "options": ["to pour", "to shake"],
-    "correct": 0
-  },
-  {
-    "text": "Ich habe eine Reise ___.",
-    "options": ["planen", "geplant"],
-    "correct": 1
-  },
-  {
-    "text": "Ich bin es ___, früh aufzustehen.",
-    "options": ["gewohnt", "gewöhnt"],
-    "correct": 0
+    "text": "Flor lacht und ist glücklich.",
+    "options": ["Flor llora en casa.", "Flor está enferma.", "Flor ríe y está feliz."],
+    "correct": 2
   }
 ]
 
